Add SPA fallback for client-side routing

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
     { "source": "/api/(.*)", "destination": "https://lawyer-assistance-api.onrender.com/api/$1" },
-    { "source": "/uploads/(.*)", "destination": "https://lawyer-assistance-api.onrender.com/uploads/$1" }
+    { "source": "/uploads/(.*)", "destination": "https://lawyer-assistance-api.onrender.com/uploads/$1" },
+    { "source": "/((?!api|uploads).*)", "destination": "/index.html" }
   ]
 }
