Add VITE_API_URL to wrangler config

--- a/client/wrangler.toml
+++ b/client/wrangler.toml
@@ -1,3 +1,6 @@
 name = "lawyerassistance"
 compatibility_date = "2024-01-01"
 pages_build_output_dir = "./dist"
+
+[vars]
+VITE_API_URL = "https://lawyer-assistance-api.onrender.com"
